fixed CTA padding and cutoff

--- a/src/sass/tmt-newco-theme.scss
+++ b/src/sass/tmt-newco-theme.scss
@@ -293,9 +293,11 @@ $newco-white-background: #ffffff;
     .marg1 {
       margin-bottom: 30px;
     }
-    .sectorpage-strengths-list .sectorpage-strengths-list-item .btn-container {
-      left: 15px;
-      right: auto;
+    .sectorpage-strengths-list .sectorpage-strengths-list-item .bottom-container {
+      margin: 0 10px;
+      .text-right {
+        text-align: left;
+      }
     }
     .slant {
       display: none;
